// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button type="button" class="oxd-icon-button oxd-dialog-close-button oxd-dialog-close-button-position" flow="top"><i class="oxd-icon oxd-icon--extra-large bi-x" style="color: rgb(255, 255, 255);"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog dialogContainer-div 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div>
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button type="button" class="oxd-icon-button oxd-dialog-close-button oxd-dialog-close-button-position" flow="top"><i class="oxd-icon oxd-icon--extra-large bi-x" style="color: rgb(255, 255, 255);"></i></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog no shadow 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet" show="true" role="document"><button type="button" class="oxd-icon-button oxd-dialog-close-button oxd-dialog-close-button-position" flow="top"><i class="oxd-icon oxd-icon--extra-large bi-x" style="color: rgb(255, 255, 255);"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog persistent 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button type="button" class="oxd-icon-button oxd-dialog-close-button oxd-dialog-close-button-position" flow="top"><i class="oxd-icon oxd-icon--extra-large bi-x" style="color: rgb(255, 255, 255);"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog show 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button type="button" class="oxd-icon-button oxd-dialog-close-button oxd-dialog-close-button-position" flow="top"><i class="oxd-icon oxd-icon--extra-large bi-x" style="color: rgb(255, 255, 255);"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog witout close 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"></div>
      </div>
    </div>
  </div>
</transition-stub>
`;
